src/test/deca/context/valid/if-else.deca
// Description:
//    test condition (if, else) et println
//
// Resultats:
//
//
//
// Historique:
//    cree le 01/01/2025

{
   if (true) {
      println("hello");
   } else {
      println("goodbye");
   }
}